--- a/resources/rails/post-rm.erb
+++ b/resources/rails/post-rm.erb
@@ -1,5 +1,5 @@
 #!/bin/bash -e
 
 # invoke update-rc.d to get the app's init script loaded
-update-rc.d "app-name" remove
+update-rc.d "<%= init_name %>" remove
 
