Fixed a problem where directories were treated as files in dpkg-rails

--- a/resources/rails/apache.conf.erb
+++ b/resources/rails/apache.conf.erb
@@ -14,6 +14,6 @@
   ProxyPass / balancer://mongrel_cluster/
   ProxyPassReverse / balancer://mongrel_cluster/
   
-  ErrorLog /var/log/apache2/<%= server_name %>/error.log
-  CustomLog /var/log/apache2/<%= server_name %>/access.log combined
+  ErrorLog /var/log/<%= name %>/apache2/error.log
+  CustomLog /var/log/<%= name %>/apache2/access.log combined
 </VirtualHost>
