--- a/resources/rails/logrotate.conf.erb
+++ b/resources/rails/logrotate.conf.erb
@@ -1,4 +1,4 @@
-/var/log/apache2/<%= server_name %>/*.log {
+/var/log/<%= name %>/apache2/*.log {
         weekly
         missingok
         rotate 52
