Finished reorganisation infrastructure bits for initial rubyforge release

--- a/resources/rails/apache.conf.erb
+++ b/resources/rails/apache.conf.erb
@@ -4,7 +4,7 @@
 <% end -%>
 </Proxy>
 
-<VirtualHost *>
+<VirtualHost *:80>
   ServerAdmin webskivvy@reprocessed.org
   ServerName <%= server_name %>
 <% server_aliases.each do |server_alias| -%>
